--- a/Step01/03_사칙연산자.html
+++ b/Step01/03_사칙연산자.html
@@ -5,7 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>사칙연산자</title>
     <script>
-       
+       //변수 두개 선언, 임의의 정수값으로 초기화
+       let n1 = 10, n2 =7;
+       //사칙연산자
+       //   +   -   *   /   %
+       document.write(n1 + n2,'<br>');
+       document.write(n1 - n2,'<br>');
+       document.write(n1 * n2,'<br>');
+       document.write(n1 / n2,'<br>');
+       document.write(n1 % n2,'<br>','<hr>');
+
+       let str = '안녕하세요';
+       document.write(str + n1 + n2,'<br>');
+
+       //------------------------------------------
+       let msg = Number(prompt('숫자하나 입력 하세요',0));
+       document.write(msg,'<br>');
+       //입력 받은 숫자에 3을 곱해서 출력
+       document.write(msg * 3,'<br>');
+       //입력 받은 숫자에 100을 더해서 출력
+       document.write(msg + 100,'<br>');
     </script>
 </head>
 <body>
