--- a/Step01/05_증감연산자.html
+++ b/Step01/05_증감연산자.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>증감연산자.</title>
+    <title>증감연산자</title>
     <script>
-     
+        // ++   --
+        let n1 = 10;
+        let n2 = 10;
+
+        document.write(n1,'<br>');
+        document.write(n1++,'<br>');
+        document.write(n1,'<br>');
+        
+        document.write('<hr>',n2,'<br>');
+        document.write(++n2,'<br>');
+        document.write(n2,'<br>');
     </script>
 </head>
 <body>
