--- a/Step01/04_복합대입연산자.html
+++ b/Step01/04_복합대입연산자.html
@@ -5,7 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>복합대입연산자</title>
     <script>
-      
+      //    +=  -=  *=  /=  %=
+      //    a = a * 10
+      //    a *= 10
+    let n = 20;
+    n += 4;
+    document.write(n,"<br>");
+    n -= 3;
+    document.write(n,"<br>");
+    n *= 2;
+    document.write(n,"<br>");
+    n /= 7;
+    document.write(n,"<br>");
+    n %= 9;
+    document.write(n,"<br>");
     </script>
 </head>
 <body>
