--- a/Step01/07_관계연산자_타입.html
+++ b/Step01/07_관계연산자_타입.html
@@ -5,7 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>관계연산자</title>
     <script>
-     
+     let n1 = 10;
+     let n2 = '10';
+
+     document.write(n1 == n2,'<br>');
+     document.write(n1 != n2,'<br>');
+
+     //변수에 저장된 데이터 타입 확인
+     console.log(typeof n1, typeof n2);
+
+     //데이터와 데이터 타입까지 확인하는 연산자
+     document.write(n1 === n2,'<br>');
+     document.write(n1 !== n2,'<br>');
+
     </script>
 </head>
 <body>
