--- a/Step01/10_while_2.html
+++ b/Step01/10_while_2.html
@@ -16,7 +16,29 @@
         }
     </style>
     <script>
-     
+        //숫자 1~10까지 출력하는 반복문
+        //숫자가 짝수면 글자색을 파랑색, 홀수면 글자색을 빨간색으로 숫자 출력
+        let i = 1;
+        while(i <= 10){
+            // if(i % 2 == 0)
+            //     document.write('<p class=\'blue\'>'+i+'</p>');
+            // else
+            //     document.write('<p class=\'red\'>'+i+'</p>');
+            if(i % 2 == 0)
+                document.write(`<p class='blue'>${i}</p>`);
+            else
+                document.write(`<p class='red'>${i}</p>`);
+            i++;
+        }
+
+        document.write('<hr>');
+        let dan = Number(prompt('단을 입력하세요',0));
+        i = 1;
+        while(i < 10){
+            document.write(`<p>${dan} * ${i} = ${dan * i}</p>`);
+            // document.write('<p>',dan,'*',i,'=',dan*i,'</p>');
+            i++;
+        }
     </script>
 </head>
 <body>
