--- a/Step01/11_do_while.html
+++ b/Step01/11_do_while.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>do-while</title>
     <script>
-      
+      //1~10까지 합을 출력하는 코드
+      //do-while 이용
+      let i = 1;
+      let sum = 0;
+
+      do{
+        sum += i;
+        i++;
+      }while(i<=10);
+
+      document.write(sum);
     </script>
 </head>
 <body>
