--- a/Step01/12_for_1.html
+++ b/Step01/12_for_1.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>for</title>
     <script>
-     
+        let dan = Number(prompt('단을 입력하세요',0));
+        for(let i = 1; i < 10;i++){
+            document.write(`<p>${dan} * ${i} = ${dan * i}</p>`);
+        }
+        // console.log(i);
+        num = 100;
+        console.log(num);
     </script>
 </head>
 <body>
