--- a/Step01/13_for_2.html
+++ b/Step01/13_for_2.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>for</title>
     <script>
-      
+      //1~100까지의 숫자들 중 짝수들의 합만 출력
+      let sum = 0;
 
+      for(let i=1;i<=100;i++){
+        if(i % 2 == 0)
+            sum += i;
+      }
+
+      document.write(sum);
     </script>
 </head>
 <body>
