--- a/Step01/24_switch_2.html
+++ b/Step01/24_switch_2.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script>
-    
+      let no = Number(prompt("숫자 입력, 1-Goole, 2-Naver, 3-Daum", "0"));
+      let url = "https://";
+
+      switch (no) {
+        case 1:
+          url += "www.google.co.kr";
+          break;
+        case 2:
+          url += "www.naver.com";
+          break;
+        case 3:
+          url += "www.daum.net";
+          break;
+        default:
+          url += "www.cyworld.com";
+      }
+      alert(location.href);
+      location.href = url; //내가 원하는 주소로 이동
     </script>
   </head>
   <body></body>
