--- a/Step01/25_seat.html
+++ b/Step01/25_seat.html
@@ -22,12 +22,17 @@
       border:1px solid black;
       vertical-align: bottom;
       text-align: center;
+      padding: 10px;
     }
     .icon{
       width: 64px;
       height: 64px;
       display: inline-block;
-      border: 1px solid red;
+      /* border: 1px solid red; */
+      background-image: url(./img/chair_2_.png);
+    }
+    .icon:hover{
+      background-image: url(./img/chair_1_.png);
     }
   </style>
   <script>
