--- a/Step02/02_null.html
+++ b/Step02/02_null.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>null</title>
     <script>
-      
+      let num;
+      //undefined --> 데이터가 없거나 매개변수에서 데이터를 못받아 왔을 때
+      console.log(num);
+      num = null; //빈값
+      console.log(num);
+      console.log(null === undefined);
     </script>
 </head>
 <body>
