--- a/Step02/03_date.html
+++ b/Step02/03_date.html
@@ -31,6 +31,7 @@
     document.write(firstDay.toLocaleString(),'<br>');
     document.write(lastDay.toLocaleString(),'<br>');
 
+    document.write((lastDay.getTime() - firstDay.getTime()) / (1000 * 60 * 60 * 24));
     </script>
 </head>
 <body>
