--- a/Step02/04_d_day.html
+++ b/Step02/04_d_day.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-   
+    /* 
+        오늘 날짜 기준으로 2025수능날까지의 D-Day를 출력
+        2024-11-14 00:00:00
+    */
+   let today = new Date();
+   today.setHours(0);
+   today.setMinutes(0);
+   today.setSeconds(0);
+   today.setMilliseconds(0);
+
+    let soo = new Date('2024-11-14 00:00:00');
+    console.log(soo.toLocaleString());
+
+    let dday = (soo.getTime() - today.getTime()) / (1000 * 60 * 60 * 24);
+
+    document.write(`수능날까지 ${dday}일 남았습니다.`);
+
     </script>
 </head>
 <body>
