--- a/Step02/05_calerandar.html
+++ b/Step02/05_calerandar.html
@@ -44,7 +44,8 @@
     </style>
     <script>
         //1. 오늘 날짜 생성
-        let today = new Date();
+        // let today = new Date();
+        let today = new Date(2024,5,1);
         //2. 현재월의 첫번째 날짜, 현재월의 마지막 날짜를 구함
         let startDate = new Date(today.getFullYear(), today.getMonth(), 1);
         let endDate = new Date(today.getFullYear(), today.getMonth() + 1, 0);
@@ -65,22 +66,36 @@
         //2. 달력 일수를 조립
         // 2-1 반복문 중첩 사용했을때
         // 출력 달력의 줄수
-        let line = Math.ceil((endDate.getTime() - startDate.getTime()) / (7 * 24 * 60 * 60 * 1000));
-        console.log(line);
+        // let line = Math.ceil((endDate.getTime() - startDate.getTime()) / (7 * 24 * 60 * 60 * 1000));
+        // console.log(line);
 
-        for(let i=0;i<line;i++){
-            tag += '<tr>';
-            for(let j = 0; j < 7; j++){
-                if(startDate.getMonth() == today.getMonth())
-                    tag += `<td>${startDate.getDate()}</td>`;
-                else
-                    tag += `<td class='disable'>${startDate.getDate()}</td>`;
-                startDate.setDate(startDate.getDate() + 1);
+        // for(let i=0;i<line;i++){
+        //     tag += '<tr>';
+        //     for(let j = 0; j < 7; j++){
+        //         if(startDate.getMonth() == today.getMonth())
+        //             tag += `<td>${startDate.getDate()}</td>`;
+        //         else
+        //             tag += `<td class='disable'>${startDate.getDate()}</td>`;
+        //         startDate.setDate(startDate.getDate() + 1);
+        //     }
+        //     tag += '</tr>';
+        // }
+        // tag += '</table>';
+        //2-2. 반복문 하나로 작업
+        while(startDate.getTime() <= endDate.getTime()){
+            switch(startDate.getDay()){
+                case 0:
+                    tag += `<tr><td ${startDate.getMonth() == today.getMonth() ? '' : 'class=\'disable\''}>${startDate.getDate()}</td>`;
+                    break;
+                case 6: 
+                    tag += `<td ${startDate.getMonth() == today.getMonth() ? '' : 'class=\'disable\''}>${startDate.getDate()}</td></tr>`;
+                    break;
+                default:
+                    tag += `<td ${startDate.getMonth() == today.getMonth() ? '' : 'class=\'disable\''}>${startDate.getDate()}</td>`;
             }
-            tag += '</tr>';
+            startDate.setDate(startDate.getDate() + 1);
         }
         tag += '</table>';
-
         document.write(tag);
     </script>
 </head>
