--- a/Step02/07_string_1.html
+++ b/Step02/07_string_1.html
@@ -11,7 +11,28 @@
             "형사피고인이 스스로 변호인을 구할 수 없을 때에는" +
             "법률이 정하는 바에 의하여 국가가 변호인을 붙인다.";
 
-          
+        //문자열 str에서 인덱스 2번과 3번에 해당하는 글자를 뽑음
+        document.write(str.charAt(2), str.charAt(3), "<br>");
+        //문자열 검색 - 변호인 문자열로 검색
+        //문자열 검색 - 찾는 문자열이 없으면 -1을 리턴함
+        document.write(str.indexOf("변호인"), "<br>");
+        document.write(str.indexOf("변호인", 26), "<br>");
+        document.write(str.indexOf("변호인", 62), "<br>");
+        document.write(str.indexOf("변호인", 97), "<br>");
+        document.write(str.lastIndexOf("변호인"), "<br>");
+
+        //문자열 길이 출력
+        document.write(str.length, '<br>');
+
+        //문자열 바꾸기
+        //문자열 바꾸기 - 최초 검색된 것만 변경, 변경사항은 저장되지 않음
+        //변 -> 신
+        document.write(str.replace('변', '신'), '<br>');
+        document.write(str, '<br>');
+        //문자열 바꾸기 - 모든 문자열 변경
+        document.write(str.replaceAll("변","신"),"<br>");
+
+        
     </script>
 </head>
 
