문자열 추출

--- a/Step02/09_string_2.html
+++ b/Step02/09_string_2.html
@@ -7,6 +7,15 @@
     <script>
         var str = "Hello World Test Korea Soccer Baseball";
 
+        //문자열 부분 추출
+        //4번 인덱스부터 10글자
+        document.write(str.substr(4,10),'<br>');
+        //4번 인덱스부터 10번 인덱스 전까지 추출
+        document.write(str.substring(4,10),'<br>');
+        //4번 인덱스부터 끝까지 추출
+        document.write(str.substr(4),"<br>");
+        document.write(str.substring(4),"<br>");
+
     </script>
 </head>
 <body>
