--- a/Step02/09_string_2.html
+++ b/Step02/09_string_2.html
@@ -16,6 +16,25 @@
         document.write(str.substr(4),"<br>");
         document.write(str.substring(4),"<br>");
 
+        //문자열 분리
+        var arr = str.split(" ");
+        console.log(arr);
+        document.write(arr,'<br>');
+
+        //배열을 하나의 문자로 합치는 방법
+        document.write(arr.join('&'),'<br>');
+
+        //대문자 변환
+        document.write(str.toUpperCase(),'<br>');
+        //소문자 변환
+        document.write(str.toLowerCase(),'<br>');
+
+        //문자 코드값
+        var str2 = '가';
+        document.write(str2.charCodeAt(0),"<br>");
+        document.write(String.fromCharCode(65),"<br>");
+        document.write(String.fromCharCode(44032));
+
     </script>
 </head>
 <body>
