--- a/Step04/02_array_2.html
+++ b/Step04/02_array_2.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>배열</title>
     <script>
-       
+        //배열 생성
+        let arr = [];
+        //let arr = new Array();
+
+        //데이터 추가
+        arr.push(10);
+        arr.push(20);
+        arr.push(true);
+        arr.push(false);
+        arr.push('test');
+        arr.push(1);
+
+        //데이터 전체 출력
+        document.write(`<p>${arr}</p>`);
+        console.log(arr);
+
+        //배열 내용을 검색
+        document.write(`값이 test 문자열을 검색 : ${arr.indexOf('test')}<br>`);
+        document.write(`값이 test1 문자열을 검색 : ${arr.indexOf('test1')}<br>`);
+
+        //값이 30보다 작은 배열의 요소값을 검색해서 해당 인덱스 번호 출력
+        for(let i = 0 ;i < arr.length; i++){
+            if(arr[i] < 30)
+                document.write(i, ' ');
+        }
+        document.write('<br>');
+        let result = arr.filter((val,idx,arr) => val < 30);
+        document.write(result, '<br>');
+
+        //배열 요소 삭제
+        arr.pop(); //마지막에 저장된 값을 삭제
+        document.write(`<p>${arr}</p>`);
+
+        document.write(`${arr}<br>`,);
+        //1번 인덱스 3번 인덱스 전까지
+        document.write(`${arr.slice(1,3)}<br>`); //배열 일부 추출 - 기존 배열 변경이 없음
+        document.write(`${arr}<br>`);
+
+        document.write(`${arr}<br>`,);
+        //1번 인덱스부터 3개 추출
+        document.write(`${arr.splice(1,3)}<br>`); //배열 일부 추출 - 기존 배열 변경이 있음
+        document.write(`${arr}<br>`);
+
+
     </script>
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
