--- a/Step04/04_lotto_1.html
+++ b/Step04/04_lotto_1.html
@@ -23,7 +23,21 @@
         }
     </style>
     <script>
-       
+        let lotto = [];
+        //로또 번호 5셋트 저장
+        while(lotto.length<5){
+            //로또번호 한셋트 배열에 저장
+            let arr = [];
+            
+            while(arr.length < 6){
+                let n = Math.floor(Math.random() * 45) + 1;
+                if(!(n in arr)) 
+                arr.push(n);
+            }
+            lotto.push(arr);
+        }
+       //로또번호 출력
+       console.log(lotto);
     </script>
 </head>
 <body>
