--- a/Step04/05_function_1.html
+++ b/Step04/05_function_1.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>함수</title>
     <script>
-     
+        //함수를 선언으로 작성시 호이스팅으로 미리 메모리에 등록하는 작업이 이루어짐
+        //그래서 선언 순서와 상관 없이 호출이 가능함.
+        sum(30,40);
+
+        //undefined : 값이 없다.
+        //null : 데이터가 비었다
+        function sum(a, b){
+            // if(b == undefined) return;
+            console.log(a,b,a+b);
+            return a+b;
+        }
+
+        sum(10,20);
+        sum(10);
+        //return이 없으면 결과값은? 값은 받은 적이 없으니까 undefined가 저장
+        let result = sum(5,6);
+        console.log(result);
     </script>
 </head>
 <body>
