--- a/Step04/11_array_ex.html
+++ b/Step04/11_array_ex.html
@@ -5,7 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>배열, 객체, 연산</title>
     <script>
-     
+        //Spread Operator, 스프레드 연산자
+
+        //객체 생성
+
+        //스프레드 연산자를 이용한 객체 합치기
+
+        //배열
+        //map()
+
+        //find()
+
+        //filter()
+
+        //reduce()
     </script>
 </head>
 <body>
