--- a/Step04/11_array_ex.html
+++ b/Step04/11_array_ex.html
@@ -5,12 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>배열, 객체, 연산</title>
     <script>
+        const arr1 = [1,2,3,4,5];
+        const arr2 = [6,7,8,9,10];
+
         //Spread Operator, 스프레드 연산자
-
+        console.log(...arr1,arr1);
+        console.log(...arr2,arr2);
+        const arr3 = [...arr1,...arr2,true,false,'test'];
+        console.log(arr3);
         //객체 생성
-
+        const obj1 = {
+            name : '홍길동',
+            age : 20,
+            printInfo : function(){
+                console.log(this.name, this.age);
+            }
+        };
+        obj1.gender = 'M';
+        console.log(obj1);
+        obj1.printInfo();
+        //사는 도시, 연락처, 저장하고 있는 정보를 출력하는 함수 -> printInfo
+        const obj2 = {
+            city : '서울',
+            tel : '010-0000-1234',
+            printInfo : function(){
+                console.log(this.city,this.tel);
+            }
+        }
+        console.log(obj2);
+        obj2.printInfo();
         //스프레드 연산자를 이용한 객체 합치기
-
+        const obj3 = {...obj1, ...obj2};
+        console.log(obj3);
+        obj3.printInfo();
+        
         //배열
         //map()
 
