--- a/Step04/12_array_quest.html
+++ b/Step04/12_array_quest.html
@@ -36,10 +36,11 @@
                 let arr = [];
 
                 while (arr.length < 6) {
-                    let n = Math.floor(Math.random() * 45) + 1;
-                    if (!(n in arr))
+                    let n = Math.trunc(Math.random() * 45) + 1;
+                    if (arr.indexOf(n) == -1)
                         arr.push(n);
                 }
+                console.log(arr);
                 lotto.push(arr);
                 tag += `<tr>${arr.reduce((acc,cur,idx) => `${acc}<td>${cur}</td>`, '')}</tr>`;
             }
