클릭 이벤트

--- a/Step05/03_event_click_2.html
+++ b/Step05/03_event_click_2.html
@@ -25,7 +25,21 @@
 <body>
     <div id="pop"></div>
     <script>
-     
+        //body 태그 선택
+        let body = document.querySelectorAll('body')[0];
+        //아이디 속성값이 pop 인 태그를 선택
+        let pop = document.querySelector('#pop');
+        //body 태그에 클릭 이벤트 추가
+        //body 태그 클릭했을때 경고창 띄움
+        //이벤트 객체 : 이벤트가 발생 했을때 해당 이벤트에 관련된 정보
+        body.onclick = function(event){
+            console.log(event);
+            // pop에 클릭한 마우스 좌표값을 출력
+            pop.innerHTML = `${event.clientX},${event.clientY}`;
+            // pop의 위치를 클릭한 좌표값으로 설정
+            pop.style.top = `${event.clientY}px`;
+            pop.style.left = `${event.clientX}px`;
+        }
     </script>
 
 </body>
