--- a/Step05/04_event_click_3.html
+++ b/Step05/04_event_click_3.html
@@ -5,7 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>event</title>
     <script>
-     
+        window.onload = () => {
+            //구글 링크와, 네이버 링크 선택
+            let google = document.querySelector('#google');
+            let naver = document.querySelectorAll('#naver')[0];
+            //각 링크를 클릭하면 '구글 페이지로 이동합니다.' 라는 경고창을 출력
+            google.onclick = (e) => {
+                alert('구글 페이지로 이동합니다.');
+                e.preventDefault();//기존 태그에 적용된 이벤트 기능을 실행하지 않음
+            }
+            //각 링크를 클릭하면 '네이버 페이지로 이동합니다.' 라는 경고창을 출력
+            naver.onclick = (e) => {
+                alert('네이버 페이지로 이동합니다.');
+                return false;//기존 태그에 적용된 이벤트 기능을 실행하지 않음
+            }
+        }
     </script>
 </head>
 <body>
