마우스 이벤트

--- a/Step05/08_event_mouse_over_out.html
+++ b/Step05/08_event_mouse_over_out.html
@@ -15,7 +15,21 @@
         }
     </style>
     <script>
-       
+        window.onload = () => {
+            //div 태그 선택
+            let div = document.querySelector('#div');
+
+            // div에 onmouseover 이벤트가 발생시 테두리를 빨강색으로 지정
+            div.onmouseover = () => {
+                div.style.borderColor = 'red';
+                console.log('onmouseover');
+            }
+            // div에 onmouseout 이벤트가 발생시 테두리를 검정색으로 지정
+            div.onmouseout = () => {
+                div.style.borderColor = 'black';
+                console.log('onmouseout');
+            }
+        }
         
     </script>
 </head>
