--- a/Step05/10_event_mouse_out_leave.html
+++ b/Step05/10_event_mouse_out_leave.html
@@ -15,7 +15,18 @@
         }
     </style>
     <script>
-      
+        window.onload = () => {
+            //box1, box2 선택
+            //box1, box2 이벤트로 마우스가 벗어나면 배경색을 빨강으로 지정
+            //box1 onmouseout
+            document.querySelector("#box1").onmouseout = function(){
+                this.style.backgroundColor = 'red';
+            }
+            //box2 onmouseleave
+            document.querySelector("#box2").onmouseleave = function(){
+                this.style.backgroundColor = 'red';
+            }
+       }
     </script>
 </head>
 <body>
