--- a/Step05/15_accodion.html
+++ b/Step05/15_accodion.html
@@ -83,7 +83,7 @@
                 }
             }
         });
-        
+        //all close 버튼 눌렀을때 모든 content를 0px로 바꾸는 작업
        }
     </script>
 </head>
