--- a/Step06/06_ajax_1.html
+++ b/Step06/06_ajax_1.html
@@ -9,7 +9,7 @@
             let request = new XMLHttpRequest();
 
             //요청할 URL
-            request.open('GET','https://api.openweathermap.org/data/2.5/weather?id=1835847&appid=API KEY');
+            request.open('GET','https://api.openweathermap.org/data/2.5/weather?id=1835847&appid=API_KEY');
 
             //결과 데이터를 받을 형식
             request.responseType = 'json';
@@ -18,9 +18,19 @@
             //데이터 요청에 성공 했을 때
             request.addEventListener('load', (t) => {
                 console.log(t);
+                let r = t.currentTarget.response;
+                let tag = '';
+                tag += `<p>도시명 : ${r.name}</p>`;
+                tag += `<p>현재날씨 : ${r.weather[0].main}</p>`;
+                tag += `<p>최고온도 : ${r.main.temp_max - 273.15}</p>`;
+                tag += `<p>최저온도 : ${r.main.temp_min - 273.15}</p>`;
+                tag += `<p>바람세기 : ${r.wind.speed}m/sec</p>`;
+
+                document.querySelector('.result').innerHTML = tag;
             });
             //데이터 요청에 실패 했을 때
             request.addEventListener('error', (t) => {
+                document.querySelector('.result').innerHTML = '서버 호출 오류';
                 console.log(t);
             });
 
