--- a/Step06/07_ajax_2.html
+++ b/Step06/07_ajax_2.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ajax</title>
     <script>
-       
+        function RequestInfo() {
+            let url = 'https://api.openweathermap.org/data/2.5/weather?id=1835847&appid=API_KEY';
+
+            fetch(url).then((response) => {
+                //호출 결과를 받는 부분
+                if (!response.ok) {
+                    throw new Error(`HTTP error : ${response.stateus}`);
+                }
+                return response.json();
+            }).then((json) => {
+                //데이터를 받아서 화면에 출력 처리하는 부분
+                console.log(json);
+                let tag = '';
+                tag += `<p>도시명 : ${json.name}</p>`;
+                tag += `<p>현재날씨 : ${json.weather[0].main}</p>`;
+                tag += `<p>최고온도 : ${json.main.temp_max - 273.15}</p>`;
+                tag += `<p>최저온도 : ${json.main.temp_min - 273.15}</p>`;
+                tag += `<p>바람세기 : ${json.wind.speed}m/sec</p>`;
+                document.querySelector('.result').innerHTML = tag;
+
+            }).catch((error) => {
+                //에러가 발생했을때 처리하는 영역
+                console.log(error);
+            });
+        }
         window.onload = () => {
-            
+            document.querySelector('button').onclick = () => {
+                RequestInfo();
+            }
         }
     </script>
 </head>
+
 <body>
     <button>날씨 정보 읽기</button>
     <div class="result"></div>
 </body>
+
 </html>
