--- a/Step06/08_ajax_3.html
+++ b/Step06/08_ajax_3.html
@@ -5,8 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ajax</title>
     <script>
+         function RequestInfo(search){
+            let request = new XMLHttpRequest();
+
+            //요청할 URL
+            request.open('GET','http://nam3324.synology.me:32813/search/blog?query='+search);
+
+            //결과 데이터를 받을 형식
+            request.responseType = 'json';
+
+            //이벤트 처리
+            //데이터 요청에 성공 했을 때
+            request.addEventListener('load', (t) => {
+                console.log(t);
+                let tag = '';
+
+                document.querySelector('.result').innerHTML = tag;
+            });
+            //데이터 요청에 실패 했을 때
+            request.addEventListener('error', (t) => {
+                document.querySelector('.result').innerHTML = '서버 호출 오류';
+                console.log(t);
+            });
+
+            //데이터 요청
+            request.send();
+        }
         window.onload = () => {
-          
+            document.querySelector('button').onclick = () => {
+                //ajax를 이용하여 openweather의 날씨 정보를 읽어옴
+                RequestInfo(document.querySelector("#txt").value);
+            }
         }
     </script>
 </head>
