--- a/Step06/09_ajax_4.html
+++ b/Step06/09_ajax_4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ajax</title>
     <script>
-        
+        //이전 08_ajax_3.html을 fetch로 변경
         window.onload = () => {
             
         }
